The beginning of header and nav

--- a/site/index.html
+++ b/site/index.html
@@ -8,7 +8,18 @@
 </head>
 <body>
     <div class="grid">
-        <p>stuff</p>
+        <header>
+            <img src="" alt="" title="">
+            <h1>StarSports</h1>
+            <button><a href="#">Logga in</a></button>
+        </header>
+        <nav>
+            <ul>
+                <a href=""></a>
+                <a href=""></a>
+                <a href=""></a>
+            </ul>
+        </nav>
     </div>
 </body>
 </html>
