Them nice buttons

--- a/site/index.html
+++ b/site/index.html
@@ -14,11 +14,9 @@
             <button><a href="#">Logga in</a></button>
         </header>
         <nav>
-            <ul>
-                <a href=""></a>
-                <a href=""></a>
-                <a href=""></a>
-            </ul>
+            <button><a href="#">Öppettider</a></button>
+            <button><a href="#">Våra Lokaler</a></button>
+            <button><a href="#">Om Oss</a></button>
         </nav>
     </div>
 </body>
