More buttons and location bar

--- a/site/index.html
+++ b/site/index.html
@@ -18,6 +18,9 @@
             <button><a href="#">Våra Lokaler</a></button>
             <button><a href="#">Om Oss</a></button>
         </nav>
+        <div class="location">
+            <a href="#">Hem</a>
+        </div>
     </div>
 </body>
 </html>
