Added Borders and a star

--- a/site/index.html
+++ b/site/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="grid">
         <header>
-            <img src="" alt="" title="">
+            <img src="img/star.png" alt="Star Logo" title="StarSports">
             <h1>StarSports</h1>
             <button><a href="#">Logga in</a></button>
         </header>
@@ -22,6 +22,10 @@
         <div class="location">
             <a href="#">Hem</a>
         </div>
+        <main>
+            <img src="" alt="">
+        </main>
+        <footer></footer>
     </div>
 </body>
 </html>
