started with main

--- a/site/index.html
+++ b/site/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="grid">
         <header>
-            <img src="img/star.png" alt="Star Logo" title="StarSports">
+            <img src="img/star.png" alt="Star Logo">
             <h1>StarSports</h1>
             <button><a href="#">Logga in</a></button>
         </header>
@@ -23,7 +23,7 @@
             <a href="#">Hem</a>
         </div>
         <main>
-            <img src="" alt="">
+            <img src="img/yeah.jpg" alt="High Five">
         </main>
         <footer></footer>
     </div>
