Added another pic to the site, messed a bit with the grid

--- a/site/index.html
+++ b/site/index.html
@@ -24,6 +24,7 @@
         </div>
         <main>
             <img src="img/yeah.jpg" alt="High Five">
+            <img src="img/kettlebells.jpg" alt="Kettlebells">
         </main>
         <footer></footer>
     </div>
