Tried to fix my buttons, almost succeded.

--- a/site/hem.html
+++ b/site/hem.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="se">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/css.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Slab" rel="stylesheet">
-    <title>Document</title>
+    <title>StarSports</title>
 </head>
 <body>
     <div class="grid">
         <header>
             <img src="img/star.png" alt="Star Logo">
             <h1>StarSports</h1>
-            <button><a href="#">Logga in</a></button>
+            <a href="logga_in.html">Logga in</a>
         </header>
         <nav>
             <button><a href="#">Öppettider</a></button>
