--- a/site/hem.html
+++ b/site/hem.html
@@ -12,21 +12,22 @@
         <header>
             <img src="img/star.png" alt="Star Logo">
             <h1>StarSports</h1>
-            <a href="logga_in.html">Logga in</a>
+            <a href="logga_in.html"><button>Logga in</button></a>
         </header>
         <nav>
-            <button><a href="#">Öppettider</a></button>
-            <button><a href="#">Våra Lokaler</a></button>
-            <button><a href="#">Om Oss</a></button>
+            <a href="#"><button>Öppettider</button></a>
+            <a href="#"><button>Lokaler</button></a>
+            <a href="#"><button>Om Oss</button></a>
         </nav>
         <div class="location">
             <a href="#">Hem</a>
         </div>
-        <main>
-            <img src="img/yeah.jpg" alt="High Five">
-            <img src="img/kettlebells.jpg" alt="Kettlebells">
+        <main class="background">
+            <h1>Gå med oss idag!</h1>
         </main>
-        <footer></footer>
+        <footer>
+            <h2>Öppet alla dagar!</h2>
+        </footer>
     </div>
 </body>
 </html>
