Logga in finns nu.

--- a/site/logga_in.html
+++ b/site/logga_in.html
@@ -25,7 +25,9 @@
             <a href="#">Logga in</a>
         </div>
         <main>
-            <h1>Gå med oss idag!</h1>
+            <input type="text" placeholder="Användarnamn">
+            <input type="password" placeholder="Lösenord">
+            <a href="hem.html"><button>Logga in</button></a>
         </main>
         <footer>
             <h2>Öppet alla dagar!</h2>
