Added a registration button to log in.

--- a/site/logga_in.html
+++ b/site/logga_in.html
@@ -28,6 +28,7 @@
             <input type="text" placeholder="Användarnamn">
             <input type="password" placeholder="Lösenord">
             <a href="hem.html"><button>Logga in</button></a>
+            <a href="hem.html"><button>Inte medlem? Registrera dig!</button></a>
         </main>
         <footer>
             <h2>Öppet alla dagar!</h2>
