--- a/site/registrera.html
+++ b/site/registrera.html
@@ -22,13 +22,15 @@
         <div class="location">
             <a href="hem.html">Hem</a>
             <a href="#">/</a>
-            <a href="#">Logga in</a>
+            <a href="logga_in.html">Logga in</a>
+            <a href="#">/</a>
+            <a href="#">Registrering</a>
         </div>
         <main>
+            <input type="text" placeholder="E-Mail">
             <input type="text" placeholder="Användarnamn">
             <input type="password" placeholder="Lösenord">
-            <a href="hem.html"><button>Logga in</button></a>
-            <a href="registrera.html"><button>Inte medlem? Registrera dig!</button></a>
+            <a href="hem.html" class="reg"><button>Registrera</button></a>
         </main>
         <footer>
             <h2>Öppet alla dagar!</h2>
