Fixed registrera and added oppettider.

--- a/site/hem.html
+++ b/site/hem.html
@@ -15,7 +15,7 @@
             <a href="logga_in.html"><button>Logga in</button></a>
         </header>
         <nav>
-            <a href="#"><button>Öppettider</button></a>
+            <a href="oppettider.html"><button>Öppettider</button></a>
             <a href="#"><button>Lokaler</button></a>
             <a href="#"><button>Om Oss</button></a>
         </nav>
