--- a/site/oppettider.html
+++ b/site/oppettider.html
@@ -15,22 +15,20 @@
             <a href="logga_in.html"><button>Logga in</button></a>
         </header>
         <nav>
-            <a href="oppettider.html"><button>Öppettider</button></a>
+            <a href="#"><button>Öppettider</button></a>
             <a href="#"><button>Lokaler</button></a>
             <a href="#"><button>Om Oss</button></a>
         </nav>
         <div class="location">
             <a href="hem.html">Hem</a>
             <a href="#">/</a>
-            <a href="logga_in.html">Logga in</a>
-            <a href="#">/</a>
-            <a href="#">Registrering</a>
+            <a href="#">Öppettider</a>
         </div>
         <main>
-            <input type="text" placeholder="E-Mail">
-            <input type="text" placeholder="Användarnamn">
-            <input type="password" placeholder="Lösenord">
-            <a href="hem.html" class="reg"><button>Registrera</button></a>
+            <a href="#" class="lokaler">IT-Gymnasiet</a>
+            <a href="#" class="lokaler">IT-Gymnasiet</a>
+            <a href="#" class="lokaler">IT-Gymnasiet</a>
+            <a href="#" class="lokaler">IT-Gymnasiet</a>
         </main>
         <footer>
             <h2>Öppet alla dagar!</h2>
