om_oss is done. Added it and lokaler.

--- a/site/hem.html
+++ b/site/hem.html
@@ -16,8 +16,8 @@
         </header>
         <nav>
             <a href="oppettider.html"><button>Öppettider</button></a>
-            <a href="#"><button>Lokaler</button></a>
-            <a href="#"><button>Om Oss</button></a>
+            <a href="lokaler.html"><button>Lokaler</button></a>
+            <a href="om_oss.html"><button>Om Oss</button></a>
         </nav>
         <div class="location">
             <a href="#">Hem</a>
