--- a/site/lokaler.html
+++ b/site/lokaler.html
@@ -15,20 +15,19 @@
             <a href="logga_in.html"><button>Logga in</button></a>
         </header>
         <nav>
-            <a href="#"><button>Öppettider</button></a>
-            <a href="lokaler.html"><button>Lokaler</button></a>
+            <a href="oppettider.html"><button>Öppettider</button></a>
+            <a href="#"><button>Lokaler</button></a>
             <a href="om_oss.html"><button>Om Oss</button></a>
         </nav>
         <div class="location">
             <a href="hem.html">Hem</a>
             <a href="#">/</a>
-            <a href="#">Öppettider</a>
+            <a href="#">Lokaler</a>
         </div>
-        <main>
-            <a href="#" class="lokaler">IT-Gymnasiet</a>
-            <a href="#" class="lokaler">IT-Gymnasiet</a>
-            <a href="#" class="lokaler">IT-Gymnasiet</a>
-            <a href="#" class="lokaler">IT-Gymnasiet</a>
+        <main class="wide">
+            <img src="img/karta.png" alt="">
+            <h3>Den bästa lokalen</h3>
+            <button>Välj annan</button>
         </main>
         <footer>
             <h2>Öppet alla dagar!</h2>
