--- a/site/oppettider.html
+++ b/site/oppettider.html
@@ -25,10 +25,10 @@
             <a href="#">Öppettider</a>
         </div>
         <main>
-            <a href="#" class="lokaler">IT-Gymnasiet</a>
-            <a href="#" class="lokaler">IT-Gymnasiet</a>
-            <a href="#" class="lokaler">IT-Gymnasiet</a>
-            <a href="#" class="lokaler">IT-Gymnasiet</a>
+            <h4>Lorem: 00:00-23:59</h4>
+            <h4>Ipsum: 08:00-23:00</h4>
+            <h4>Dolor: 20:00-08-00</h4>
+            <h4>Sitamet: 23:59-00:00</h4>
         </main>
         <footer>
             <h2>Öppet alla dagar!</h2>
