Transfered the html to the new files.

--- a/v.2/site/public/logga_in.html
+++ b/v.2/site/public/logga_in.html
@@ -21,7 +21,15 @@
         </nav>
         <div class="location">
             <a href="index.html">Hem</a>
-        
+            <a href="#">/</a>
+    <a href="#">Logga in</a>
+</div>
+<main>
+    <input type="text" placeholder="Användarnamn">
+    <input type="password" placeholder="Lösenord">
+    <a href="index.html"><button>Logga in</button></a>
+    <a href="registrera.html"><button>Inte medlem? Registrera dig!</button></a>
+        </main>
         <footer>
             <h2>Öppet alla dagar!</h2>
         </footer>
