--- a/v.2/site/public/oppettider.html
+++ b/v.2/site/public/oppettider.html
@@ -21,7 +21,15 @@
         </nav>
         <div class="location">
             <a href="index.html">Hem</a>
-        
+            <a href="#">/</a>
+    <a href="#">Öppettider</a>
+</div>
+<main>
+    <h4>Lorem: 00:00-23:59</h4>
+    <h4>Ipsum: 08:00-23:00</h4>
+    <h4>Dolor: 20:00-08-00</h4>
+    <h4>Sitamet: 23:59-00:00</h4>
+        </main>
         <footer>
             <h2>Öppet alla dagar!</h2>
         </footer>
