--- a/v.2/site/public/registrera.html
+++ b/v.2/site/public/registrera.html
@@ -21,7 +21,17 @@
         </nav>
         <div class="location">
             <a href="index.html">Hem</a>
-        
+            <a href="#">/</a>
+    <a href="logga_in.html">Logga in</a>
+    <a href="#">/</a>
+    <a href="#">Registrering</a>
+</div>
+<main>
+    <input type="text" placeholder="E-Mail">
+    <input type="text" placeholder="Användarnamn">
+    <input type="password" placeholder="Lösenord">
+    <a href="index.html" class="reg"><button>Registrera</button></a>
+        </main>
         <footer>
             <h2>Öppet alla dagar!</h2>
         </footer>
