--- a/v.2/site/public/lokaler.html
+++ b/v.2/site/public/lokaler.html
@@ -21,7 +21,14 @@
         </nav>
         <div class="location">
             <a href="index.html">Hem</a>
-        
+            <a href="#">/</a>
+    <a href="#">Lokaler</a>
+</div>
+<main class="wide">
+    <img src="img/karta.png" alt="">
+    <h3>Den bästa lokalen</h3>
+    <button>Välj annan</button>
+        </main>
         <footer>
             <h2>Öppet alla dagar!</h2>
         </footer>
