--- a/v.2/public/site/lokaler.html
+++ b/v.2/public/site/lokaler.html
@@ -22,11 +22,30 @@
         <div class="location">
             <a href="index.html">Hem</a>
             <a href="#">/</a>
-    <a href="#">Om Oss</a>
+    <a href="#">Lokaler</a>
 </div>
 <main class="wide">
-    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quasi accusantium, voluptatibus sit minima facere velit illum itaque modi fuga ipsam repudiandae, doloremque accusamus laborum? Dolore iusto iure repudiandae sit et.</p>
-    <img src="img/stronk-cat.jpg" alt="Stronk Cat!">
+    <div id="map" class="map"></div>
+
+    <script>
+    function myMap() {
+        var mapOptions = {
+            center: new google.maps.LatLng(57.6903788, 11.974533400000041),
+            zoom: 15,
+            mapTypeId: google.maps.MapTypeId.HYBRID
+        }
+    var map = new google.maps.Map(document.getElementById("map"), mapOptions);
+    var marker = new google.maps.Marker({
+        position: new google.maps.LatLng(57.6903788, 11.974533400000041),
+        map: map
+    });
+    }
+    </script>
+
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBAuNWemv4EO71QsYak3sObKz0f86plVtc&callback=myMap"></script>
+
+    <h3>Den bästa lokalen</h3>
+    <button>Välj annan</button>
         </main>
         <footer>
             <h2>Öppet alla dagar!</h2>
