--- a/v.2/public/site/public/index.html
+++ b/v.2/public/site/public/index.html
@@ -21,12 +21,9 @@
         </nav>
         <div class="location">
             <a href="index.html">Hem</a>
-            <a href="#">/</a>
-    <a href="#">Om Oss</a>
-</div>
-<main class="wide">
-    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quasi accusantium, voluptatibus sit minima facere velit illum itaque modi fuga ipsam repudiandae, doloremque accusamus laborum? Dolore iusto iure repudiandae sit et.</p>
-    <img src="img/stronk-cat.jpg" alt="Stronk Cat!">
+        </div>
+<main class="background">
+    <h1>Gå med oss idag!</h1>
         </main>
         <footer>
             <h2>Öppet alla dagar!</h2>
