--- a/v.2/public/site/public/logga_in.html
+++ b/v.2/public/site/public/logga_in.html
@@ -22,11 +22,13 @@
         <div class="location">
             <a href="index.html">Hem</a>
             <a href="#">/</a>
-    <a href="#">Om Oss</a>
+    <a href="#">Logga in</a>
 </div>
-<main class="wide">
-    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quasi accusantium, voluptatibus sit minima facere velit illum itaque modi fuga ipsam repudiandae, doloremque accusamus laborum? Dolore iusto iure repudiandae sit et.</p>
-    <img src="img/stronk-cat.jpg" alt="Stronk Cat!">
+<main>
+    <input type="text" placeholder="Användarnamn">
+    <input type="password" placeholder="Lösenord">
+    <a href="index.html"><button>Logga in</button></a>
+    <a href="registrera.html"><button>Inte medlem? Registrera dig!</button></a>
         </main>
         <footer>
             <h2>Öppet alla dagar!</h2>
