--- a/v.2/public/site/public/om_oss.html
+++ b/v.2/public/site/public/om_oss.html
@@ -25,8 +25,7 @@
     <a href="#">Om Oss</a>
 </div>
 <main class="wide">
-    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quasi accusantium, voluptatibus sit minima facere velit illum itaque modi fuga ipsam repudiandae, doloremque accusamus laborum? Dolore iusto iure repudiandae sit et.</p>
-    <img src="img/stronk-cat.jpg" alt="Stronk Cat!">
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quasi accusantium, voluptatibus sit minima facere velit illum itaque modi fuga ipsam repudiandae, doloremque accusamus laborum? Dolore iusto iure repudiandae sit et. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores eos repellendus explicabo earum voluptate soluta rerum accusantium similique quia at recusandae corrupti voluptas eius, esse saepe nisi obcaecati hic itaque?</p>
         </main>
         <footer>
             <h2>Öppet alla dagar!</h2>
