--- a/v.2/public/site/public/oppettider.html
+++ b/v.2/public/site/public/oppettider.html
@@ -22,11 +22,13 @@
         <div class="location">
             <a href="index.html">Hem</a>
             <a href="#">/</a>
-    <a href="#">Om Oss</a>
+    <a href="#">Öppettider</a>
 </div>
-<main class="wide">
-    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quasi accusantium, voluptatibus sit minima facere velit illum itaque modi fuga ipsam repudiandae, doloremque accusamus laborum? Dolore iusto iure repudiandae sit et.</p>
-    <img src="img/stronk-cat.jpg" alt="Stronk Cat!">
+<main>
+    <h4>Lorem: 00:00-23:59</h4>
+    <h4>Ipsum: 08:00-23:00</h4>
+    <h4>Dolor: 20:00-08-00</h4>
+    <h4>Sitamet: 23:59-00:00</h4>
         </main>
         <footer>
             <h2>Öppet alla dagar!</h2>
