--- a/v.2/public/site/registrera.html
+++ b/v.2/public/site/registrera.html
@@ -22,11 +22,15 @@
         <div class="location">
             <a href="index.html">Hem</a>
             <a href="#">/</a>
-    <a href="#">Om Oss</a>
+    <a href="logga_in.html">Logga in</a>
+    <a href="#">/</a>
+    <a href="#">Registrering</a>
 </div>
-<main class="wide">
-    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quasi accusantium, voluptatibus sit minima facere velit illum itaque modi fuga ipsam repudiandae, doloremque accusamus laborum? Dolore iusto iure repudiandae sit et.</p>
-    <img src="img/stronk-cat.jpg" alt="Stronk Cat!">
+<main>
+    <input type="text" placeholder="E-Mail">
+    <input type="text" placeholder="Användarnamn">
+    <input type="password" placeholder="Lösenord">
+    <a href="index.html" class="reg"><button>Registrera</button></a>
         </main>
         <footer>
             <h2>Öppet alla dagar!</h2>
